# telsearch

./: Cargo.toml  README.md
.github/: release.yml
.github/workflows/: release.yml
src/: main.rs
