package]
name = "telsearch"
version = "0.1.0"
edition = "2021"
description = "A command-line search tool to find telomere sequences in sequencing read data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/artorias111/telsearch"
readme = "README.md"
keywords = ["search", "cli"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
